<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddRecipeActivity">

    <TextView
        android:id="@+id/addRecipeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe"
        style="@style/TitleTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editRecipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title"
        app:layout_constraintTop_toBottomOf="@id/addRecipeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/editIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingredients"
        app:layout_constraintTop_toBottomOf="@id/editRecipeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/RecipeButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/editIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />



</androidx.constraintlayout.widget.ConstraintLayout>